@@ -11,9 +11,15 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-01
+2013-02-04 Andy Salnikov
+- upgrading to pdsdata V05-03-00
+
 Tag: V00-04-00
 2013-01-30 Andy Salnikov
 - switching to const ndarrays everywhere
+- new classes cspad2x2.ConfigV2 and cspad2x2.ConfigV2QuadReg
+- method ipimb.ConfigV{1,2}.diodeGain() renamed to capacitorValue()
 
 Tag: V00-03-16
 2013-01-28 Andy Salnikov
